Added avability to change your personal paramters
